# CardioResearch-ImagingPlatform

./: LICENSE  README.md
.github/: code_analysis.py  codecov.yml
.github/workflows/: analysis.yml  build.yml  test.yml
CemrgApp/Applications/: AppList.cmake
CemrgApp/Applications/MainApp/: CMakeLists.txt  splashscreen.qrc  startCemrgApp.bat.in
CemrgApp/CMake/: CPackSetup.cmake  CTestCustom.cmake.in  FindVMTK.cmake  MacroEmptyExternalProject.cmake
CemrgApp/CMakeExternals/: ExternalProjectList.cmake  VMTK.cmake
CemrgApp/Modules/CemrgAppModule/cmdapps/: CMakeLists.txt  CemrgAppCmdTemplate.cpp  CemrgClippingTool.cpp  CemrgFixShellApp.cpp  CemrgIM2INR.cpp  CemrgMorphAnalysis.cpp  CemrgProjectLgeToVtkMesh.cpp  CemrgProjectionOptions.cpp  CemrgResampleReorient.cpp  CemrgSimpleRegistration.cpp  CemrgVentricleSegmRelabel.cpp
CemrgApp/Modules/CemrgAppModule/include/: CemrgAhaUtils.h  CemrgAtriaClipper.h  CemrgCommandLine.h  CemrgCommonUtils.h  CemrgMeasure.h  CemrgPower.h  CemrgScar3D.h  CemrgScarAdvanced.h  CemrgStrains.h
CemrgApp/Modules/CemrgAppModule/src/: CemrgAhaUtils.cpp  (+9 more)
CemrgApp/Plugins/: PluginList.cmake
CemrgApp/Plugins/kcl.cemrgapp.easi/: plugin.xml
CemrgApp/Plugins/kcl.cemrgapp.mainapp/: CMakeLists.txt  manifest_headers.cmake  plugin.xml
CemrgApp/Plugins/kcl.cemrgapp.mmcwplugin/: CMakeLists.txt  plugin.xml
CemrgApp/Plugins/kcl.cemrgapp.mmeasurement/: files.cmake
CemrgApp/Plugins/kcl.cemrgapp.powertrans/: files.cmake
CemrgApp/Plugins/kcl.cemrgapp.scar/: files.cmake  plugin.xml
CemrgApp/Plugins/kcl.cemrgapp.wathca/: CMakeLists.txt  plugin.xml
(+101 files in other folders)
