option(BUILD_CemrgCMDApps "Build ALL command-line apps for Cemrg Module" OFF)
option(BUILD_CEMRG_FIXSHELL "Build fixing shell values command line app. " ON)
option(BUILD_CEMRG_PROJECTION_OPTS "Build Scar Map Projection Options command line app. " ON)
option(BUILD_CEMRG_CLIPPINGTOOL "Build clipping valve command line app. " ON)
option(BUILD_CEMRG_PROJECTLGE "Build lge projection command line app. " ON)
option(BUILD_CEMRG_IM2INR "Build image to inr command line app. " ON)
option(BUILD